# post_blog

./: .gitignore  README.md  outline.md  post.md  post_revisado.md  pyproject.toml  report.md
src/post_crew_artigo/: crew.py  main.py
src/post_crew_artigo/config/: agents.yaml  tasks.yaml
